--- a/src/main/resources/static/wechat/register.html
+++ b/src/main/resources/static/wechat/register.html
@@ -119,7 +119,7 @@
                         $("#show").show();
                         $("#loading").hide();
                         $("#error").hide();
-                    }else {
+                    } else {
                         $("#loading").hide();
                         $("#error").show();
                     }
@@ -129,7 +129,7 @@
                     alert("出错了")
                 }
             })
-        }else {
+        } else {
             $("#loading").hide();
             $("#error").show();
             alert("没有code")
@@ -139,11 +139,15 @@
     function doRegister() {
         console.log($("#form").serialize());
         $.ajax({
-            url:"../wechat/userRegister",
+            url: "../wechat/userRegister",
             type: "POST",
             data: $("#form").serialize(),
             async: true,
             success: function (data) {
+                if (data.errorCode == 2) {
+                    //成功跳转
+                    gotoHTML("loanApply.html");
+                }
                 console.log(data);
             },
             error: function (data) {
